--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,7 @@
+.pageWapper {
+  overflow: hidden;
+  max-width: 100%;
+}
 /* Header */
 /* Header desktop */
 .containerHeader {
@@ -136,4 +140,80 @@
   bottom: auto;
   z-index: -1;
   max-width: 60%;
+}
+
+.containerInfo {
+  gap: 10px;
+  margin: 0 auto;
+  margin-top: 180px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.containerInfo > h2 {
+  width: 90%;
+  text-align: center;
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+  font-size: 3.375rem;
+  line-height: 5.25rem;
+  font-weight: 600;
+  letter-spacing: -1px;
+}
+
+.containerInfo > p {
+  width: 80%;
+  text-align: center;
+  font-size: 1.375rem;
+  line-height: 2rem;
+  letter-spacing: 0.25px;
+  color: var(--TextColorMedium);
+}
+
+.containerInfo > a {
+  display: flex;
+  padding: 0.75rem 1.25rem;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0.5rem;
+  background-color: #fff;
+  transition: all 200ms ease;
+  color: var(--ButtonTextColor);
+  line-height: 1.75rem;
+  font-weight: 600;
+  text-align: center;
+  text-decoration: none;
+  gap: 5px;
+}
+
+.containerInfo > a:hover{
+  background-color: var(--HoverColorPrimary);
+  color: var(--HoverColorSecodary)
+}
+
+
+@media (max-width: 1024px) {
+  .containerInfo > h2 {
+    font-size: 2.375rem;
+  }
+  
+  .containerInfo > p {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .containerInfo > h2 {
+    font-size: 2rem;
+    line-height: 2.5rem;
+  }
+  
+  .containerInfo > p {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
