--- a/src/styles/globalStyle.css
+++ b/src/styles/globalStyle.css
@@ -5,6 +5,7 @@
   --ButtonTextColor: #0e0e12;
   --HoverColorPrimary:#F40051;
   --HoverColorSecondary: #788ca0;
+  --BenefistColor: #788ca0;
 }
 
 body {
