--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -190,17 +190,16 @@
   gap: 5px;
 }
 
-.containerInfo > a:hover{
+.containerInfo > a:hover {
   background-color: var(--HoverColorPrimary);
-  color: var(--HoverColorSecodary)
+  color: var(--HoverColorSecodary);
 }
-
 
 @media (max-width: 1024px) {
   .containerInfo > h2 {
     font-size: 2.375rem;
   }
-  
+
   .containerInfo > p {
     font-size: 1rem;
   }
@@ -211,9 +210,144 @@
     font-size: 2rem;
     line-height: 2.5rem;
   }
-  
+
   .containerInfo > p {
     font-size: 1rem;
     line-height: 1.5rem;
   }
+}
+
+.containarPlans {
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 800px;
+}
+
+.containarPlans__items {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: 40px;
+  margin-top: 80px;
+}
+
+.containarPlans > h2 {
+  text-align: center;
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+  font-size: 3.375rem;
+  line-height: 5.25rem;
+  font-weight: 600;
+  letter-spacing: -1px;
+}
+
+.containarPlans__item {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+}
+
+.containarPlans__item__Primary {
+  padding: 20px;
+  border: 2px solid rgba(120, 140, 160, 0.4);
+  background-color: hsla(0, 0%, 100%, 0.05);
+  border-radius: 1rem;
+}
+
+.containarPlans__price {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 20px;
+  border-bottom: 1px solid var(--BenefistColor);
+}
+
+.containarPlans__price > h2 {
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+  font-size: 1.875rem;
+  line-height: 2.625rem;
+  font-weight: 500;
+}
+
+.containarPlans__price > p {
+  font-size: 4rem;
+  line-height: 1.1;
+  font-weight: 700;
+}
+
+.containarPlans__price > a {
+  cursor: pointer;
+  display: flex;
+  border: none;
+  padding: 0.75rem 1rem;
+  transition: color 200ms ease-out;
+  color: var(--HeaderButtonColor);
+  background-color: transparent;
+  font-size: 1.2rem;
+  font-weight: 500;
+  text-decoration: none;
+  border: 1px solid var(--HeaderButtonColor);
+  border-radius: 0.5rem;
+}
+
+.containarPlans__price > a:hover {
+  color: white;
+  border-color: white;
+}
+
+.containarPlans__price > .containarPlans__button {
+  display: flex;
+  padding: 0.75rem 1.25rem;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0.5rem;
+  background-color: #fff;
+  transition: all 200ms ease;
+  color: var(--ButtonTextColor);
+  line-height: 1.75rem;
+  font-weight: 600;
+  text-align: center;
+  text-decoration: none;
+  gap: 5px;
+}
+
+.containarPlans__price > .containarPlans__button:hover {
+  background-color: var(--HoverColorPrimary);
+  color: var(--HoverColorSecodary);
+  border: 1px solid var(--HoverColorPrimary);
+}
+
+.containerBenefits__list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  height: 900px;
+}
+
+.containerBenefits__list > .containerBenefits {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.containerBenefits > p {
+  font-size: 1.375rem;
+  line-height: 2rem;
+  letter-spacing: 0.25px;
+  color: var(--BenefistColor);
+  text-align: left;
+}
+
+.containerBenefits > svg {
+  color: var(--HoverColorPrimary);
 }
