--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -1,6 +1,6 @@
 #moviesSlideWrapper {
   width: 100%;
-  height: 40vh;
+  height: 45vh;
   position: relative;
   margin: 5vh 0;
   border: none;
@@ -27,13 +27,18 @@
   list-style: none;
   position: relative;
   float: left;
-  margin: 0 24px;
-  height: auto;
-  width: 160px;
-  transform: translateX(-208px);
+  margin: 0 2vh;
+  height: 40vh;
+  aspect-ratio: 9/16;
+  transform: translateX(-26.5vh);
   border: none;
   display: flex;
   flex-direction: column;
+}
+
+.movieSlide > img {
+  border-radius: 10px;
+  height: 80vh;
 }
 
 @keyframes translate {
@@ -41,104 +46,6 @@
     transform: translateX(0);
   }
   to {
-    transform: translateX(-208px);
+    transform: translateX(-26.5vh);
   }
-}
-
-/* carrossel de comentários de usuários */
-
-#carousel-container {
-  width: 60%;
-  height: 332px;
-  position: relative;
-  margin: 50px auto 0;
-  border-radius: 10px;
-}
-
-#carousel-container > div:first-child {
-  overflow: hidden;
-  max-width: 100%;
-  margin: 0;
-}
-
-#carousel {
-  position: relative;
-  width: 5000px;
-  height: 332px;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.animate {
-  -webkit-transition-duration: 0.5s;
-  -moz-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-  transition-duration: 0.5s;
-  -webkit-transition-property: -webkit-transform;
-  -moz-transition-property: -moz-transform;
-  -o-transition-property: -o-transform;
-  transition-property: transform;
-}
-
-.slide {
-  list-style: none;
-  position: relative;
-  float: left;
-  transform: translateX(-500px);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  max-width: 60%;
-  margin: 0 5%;
-}
-
-.slide > div {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-}
-.slide > div > img {
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-}
-.slide > h3 {
-  font-weight: 800;
-  font-size: 30px;
-}
-
-#controls {
-  position: absolute;
-  width: 120%;
-  top: calc(50% - 25px);
-  margin: 0 -10%;
-}
-
-#controls span {
-  width: 50px;
-  cursor: pointer;
-  opacity: 0.4;
-  border: 1px solid black;
-  filter: invert(1);
-  border-radius: 12px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 4px;
-}
-
-#controls span:hover {
-  opacity: 1;
-}
-
-#prev {
-  float: left;
-}
-
-#next {
-  float: right;
 }
